--- a/src/pages/price-list/range-repair-cost.astro
+++ b/src/pages/price-list/range-repair-cost.astro
@@ -31,10 +31,10 @@ import "css/price/style_price.css";
 
 <Navbar />
 <Reviews />
-<Layout title="Stove Repair Cost">
+<Layout title="Range Repair Cost">
   <Container>
     <main>
-      <h1><span class="animate-charcter">Stove Repair Cost</span></h1>
+      <h1><span class="animate-charcter">Range Repair Cost</span></h1>
 
       <div class="two-col-grid">
         <div class="col-one">
@@ -42,8 +42,8 @@ import "css/price/style_price.css";
             loading="lazy"
             width="500px"
             height="500px"
-            src="/stove-repair/stove-repair-1.webp"
-            alt="stove repair cost"
+            src="/stove-repair/range-epair-1.webp"
+            alt="Range repair cost"
           />
 
           <Contactbtn />
@@ -122,8 +122,8 @@ import "css/price/style_price.css";
               loading="lazy"
               width="500px"
               height="500px"
-              src="/stove-repair/stove-repair-2.webp"
-              alt="how much does stove repair cost"
+              src="/stove-repair/range-epair-2.webp"
+              alt="Range repair cost near me"
             />
           </div>
         </div>
@@ -362,8 +362,8 @@ import "css/price/style_price.css";
             loading="lazy"
             width="600px"
             height="500px"
-            src="/stove-repair/stove-repair-3.webp"
-            alt="Electric stove repair cost"
+            src="/stove-repair/range-epair-3.webp"
+            alt="Best range repair cost"
           />
         </div>
 
@@ -615,8 +615,8 @@ import "css/price/style_price.css";
             loading="lazy"
             width="500px"
             height="500px"
-            src="/stove-repair/stove-repair-4.webp"
-            alt="Gas stove repair cost"
+            src="/stove-repair/range-epair-4.webp"
+            alt="Range repair cost Los Angeles"
           />
         </div>
       </div>
@@ -735,8 +735,8 @@ import "css/price/style_price.css";
             loading="lazy"
             width="600px"
             height="500px"
-            src="/stove-repair/stove-repair-5.webp"
-            alt="Stove repair cost estimates"
+            src="/stove-repair/range-epair-5.webp"
+            alt="Range repair service fee"
           />
         </div>
 
@@ -904,8 +904,8 @@ import "css/price/style_price.css";
           loading="lazy"
           width="600px"
           height="800px"
-          src="/stove-repair/stove-repair-6.webp"
-          alt="stove repair cost per hour"
+          src="/stove-repair/range-epair-6.webp"
+          alt="Range repair parts cost"
         />
       </div>
 
