--- a/src/pages/price-list/range-repair-cost.astro
+++ b/src/pages/price-list/range-repair-cost.astro
@@ -670,8 +670,8 @@ import "css/price/style_price.css";
         <div class="desk_job-prices">
           <a href="#"
             ><p>
-              Replacing a heating element in an electric range costs, for a
-              radiant-induction part, for a metal-coil element.
+              Replacing the heating element in an electric stove with radiant
+              induction or a metal coil element costs.
             </p></a
           >
         </div>
