--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -108,6 +108,18 @@ const menuitems = [
         title: "Freezer Repair Cost",
         path: "/price-list/freezer-repair-cost",
       },
+      {
+        title: "Range Repair Cost",
+        path: "/price-list/range-repair-cost",
+      },
+      {
+        title: "Stove Repair Cost",
+        path: "/price-list/stove-repair-cost",
+      },
+      {
+        title: "Commercial Refrigerator Repair Cost",
+        path: "/price-list/commercial-refrigerator-repair-cost",
+      },
     ],
   },
 ];
@@ -158,7 +170,6 @@ const menuitems = [
                 </div>
               </div>
 
-              
               <!-- кнопка меню -->
               <div class="block lg:hidden">
                 <div class="header-bootun-1024">
@@ -204,7 +215,7 @@ const menuitems = [
               <!--Red Buttons In the black header on Mobile-->
               <div class="lg:hidden flex items-center mt-3 gap-4">
                 <Link href="tel:+14243250520" style="muted" block size="md"
-                  >CALL US: (424) 325-0520</Link
+                  >CALL: (424) 325-0520</Link
                 >
 
                 <!--Start of Housecallpro Online booking button-->
