--- a/src/components/css-components/style-contactbtn.css
+++ b/src/components/css-components/style-contactbtn.css
@@ -55,6 +55,7 @@
   justify-self: center;
   white-space: nowrap;
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+  text-shadow: 1.2px 1.2px 2px black;
 }
 
 .contact-button-book-global:hover button {
@@ -86,6 +87,7 @@
   font-weight: 700;
   transform: scale(1, 1.1);
   white-space: nowrap;
+  text-shadow: 1.2px 1.2px 2px black
 }
 
 .contact-button-call-global:hover {
