--- a/src/pages/price-list/microwave-repair-cost.astro
+++ b/src/pages/price-list/microwave-repair-cost.astro
@@ -349,7 +349,7 @@ import "css/price/style_price.css";
           <div class="desk_job-prices">
             <a href="#"><p>Microwave not heating food properly or at all.</p></a
             >
-            <p>1. Microwave Magnetron replacement cost</p>
+            <p>Microwave Magnetron replacement cost</p>
           </div>
 
           <div class="money_job-prices">
