--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -120,6 +120,18 @@ const menuitems = [
         title: "Commercial Refrigerator Repair Cost",
         path: "/price-list/commercial-refrigerator-repair-cost",
       },
+      {
+        title: "Cooktop Repair Cost",
+        path: "/price-list/cooktop-repair-cost",
+      },
+      {
+        title: "Microwave Repair Cost",
+        path: "/price-list/microwave-repair-cost",
+      },
+      {
+        title: "Range Hood Repair Cost",
+        path: "/price-list/range-hood-repair-cost",
+      },
     ],
   },
 ];
