--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -341,6 +341,8 @@ main {
   margin-top: 5px;
   align-items: center;
   padding-left: 25px;
+
+  /* list-style-type:circle !important; */
 }
 
 .questions li::before {
@@ -350,6 +352,12 @@ main {
   position: absolute;
   left: 0px;
   top: -9px;
+}
+
+.questions li li::before {
+  font-size: 24px;
+  left: 5px;
+  top: -5px;
 }
 
 /* Часто задаваемые вопросы */
