--- a/src/pages/price-list/stove-repair-cost.astro
+++ b/src/pages/price-list/stove-repair-cost.astro
@@ -1396,7 +1396,7 @@ import "css/price/style_price.css";
           </li>
           <li>
             <b>Routine maintenance: </b> Regularly wipe down the control panel to
-            prevent buildup.
+            prevent buildup.-------
           </li>
         </ul>
       </div>
