--- a/src/pages/price-list/bbq-grill-repair-cost.astro
+++ b/src/pages/price-list/bbq-grill-repair-cost.astro
@@ -1086,7 +1086,7 @@ import "css/price/style_price.css";
 
       <div class="FAQ">
         <div class="fa">
-          <h3>How long does a typical bbq repair job take?-----------</h3>
+          <h3>How long does a typical bbq repair job take?</h3>
         </div>
 
         <div class="fa_plus">︾</div>
