--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -369,6 +369,8 @@ main {
   margin-bottom: 15px; 
   padding-left: 30px;
   position: relative; 
+  font-weight: 500;
+  font-size: clamp(16px,3vw,18px);
 }
 
 .questions ol li::before {
