--- a/src/pages/price-list/commercial-ice-machine-repair-cost.astro
+++ b/src/pages/price-list/commercial-ice-machine-repair-cost.astro
@@ -529,138 +529,74 @@ import "css/price/style_price.css";
         </div>
 
         <div class="head_pricing-policy_foto-a">
-          <h2>Ways to Save Money on BBQ Grill Repair</h2>
+          <h2>What is Included in the Annual/Semi-annual Commercial Ice Machine Maintenance</h2>
+          <p>Annual or semi-annual maintenance of commercial ice machines is crucial for ensuring their efficient operation and longevity. Here’s what is typically included in these maintenance sessions</p>
         </div>
       </div>
 
       <div class="description_maintenance">
-        <div class="conclusion-description_maintenance">
-          <div class="head_description_maintenance">
-            <svg
-              fill="#000000"
-              height="35px"
-              width="35px"
-              version="1.1"
-              id="Layer_1"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              viewBox="0 0 296.999 296.999"
-              xml:space="preserve">
-              <g>
-                <g>
-                  <g>
-                    <path
-                      d="M169.197,43.09H18.808c-7.176,0-13.014,5.838-13.014,13.014v227.444c0,7.176,5.838,13.014,13.014,13.014h150.389
-				c7.176,0,13.014-5.838,13.014-13.014V56.105C182.211,48.928,176.373,43.09,169.197,43.09z M151.794,274.258H36.21
-				c-4.479,0-8.111-3.632-8.111-8.111s3.632-8.111,8.111-8.111h115.584c4.479,0,8.111,3.632,8.111,8.111
-				S156.273,274.258,151.794,274.258z M151.794,235.73H36.21c-4.479,0-8.111-3.632-8.111-8.111s3.632-8.111,8.111-8.111h115.584
-				c4.479,0,8.111,3.632,8.111,8.111C159.905,232.098,156.273,235.73,151.794,235.73z M151.794,197.202H36.21
-				c-4.479,0-8.111-3.632-8.111-8.111s3.632-8.111,8.111-8.111h115.584c4.479,0,8.111,3.632,8.111,8.111
-				S156.273,197.202,151.794,197.202z M151.794,158.674H36.21c-4.479,0-8.111-3.632-8.111-8.111s3.632-8.111,8.111-8.111h115.584
-				c4.479,0,8.111,3.632,8.111,8.111S156.273,158.674,151.794,158.674z M151.794,120.146H36.21c-4.479,0-8.111-3.632-8.111-8.111
-				s3.632-8.111,8.111-8.111h115.584c4.479,0,8.111,3.632,8.111,8.111S156.273,120.146,151.794,120.146z M151.794,81.618H36.21
-				c-4.479,0-8.111-3.632-8.111-8.111c0-4.479,3.632-8.111,8.111-8.111h115.584c4.479,0,8.111,3.632,8.111,8.111
-				C159.905,77.986,156.273,81.618,151.794,81.618z"
-                    ></path>
-                    <path
-                      d="M213.642,0H57.336c-7.177,0-13.014,5.838-13.014,13.014v13.854h124.875c16.121,0,29.237,13.115,29.237,29.237v201.931
-				h15.208c7.176,0,13.014-5.838,13.014-13.014V13.014C226.656,5.838,220.818,0,213.642,0z"
-                    ></path>
-                    <path
-                      d="M291.205,23.324C291.204,10.464,281.88,0,270.42,0c-11.461,0-20.785,10.464-20.785,23.324v13.584h41.57V23.324z"
-                    ></path>
-                    <path
-                      d="M249.635,53.13v214.537h0c0,1.2,0.342,2.373,0.983,3.371l14.921,23.249c1.087,1.694,2.919,2.712,4.881,2.712
-				c1.961,0,3.794-1.018,4.881-2.712l14.921-23.249c0.641-0.998,0.983-2.171,0.983-3.371V53.13H249.635z"
-                    ></path>
-                  </g>
-                </g>
-              </g>
-            </svg>
-            <p><b>Timely maintenance</b></p>
-          </div>
+        <ol>
 
-          <p>
-            - Timely maintenance can save you money on unnecessary repairs and
-            increase your appliance’s longevity. We charge a flat fee of $80 for
-            the BBQ grill maintenance service.
-          </p>
-          <p>
-            - BBQ grill maintenance includesa thorough cleaning of the grill
-            grates, burners, and interior components, inspection and cleaning of
-            the exterior surfaces like control panels and knobs, checking and
-            adjusting gas supply and pressure, lubricating moving parts such as
-            lid hinges, replacing worn or damaged components like ignitors and
-            valves, and conducting a general tune-up to ensure all functions are
-            operational, thereby extending the grill's lifespan and ensuring
-            safe, reliable use.
-          </p>
-        </div>
+          <li>
+            <p><b>Cleaning and Sanitizing:</b></p>
+            <ul>
+              <li>Internal Components: Thorough cleaning of water system components including the water sump, water distribution parts, and evaporator to remove scale buildup and other residues.</li>
+              <li>External Components: Cleaning of the outer body, access panels, and storage bins to prevent dirt and grease accumulation.</li>
+              <li>Ice Bin Cleaning: Sanitization of the ice bin to prevent bacterial growth and ensure hygienic ice storage.</li>
+            </ul>
+          </li>
 
-        <div class="conclusion-description_maintenance">
-          <div class="head_description_maintenance">
-            <svg
-              width="35px"
-              height="35px"
-              viewBox="0 0 24 24"
-              id="Layer_1"
-              data-name="Layer 1"
-              xmlns="http://www.w3.org/2000/svg"
-              ><defs
-                ><style>
-                  .cls-1 {
-                    fill: none;
-                    stroke: #000000;
-                    stroke-miterlimit: 10;
-                    stroke-width: 1.91px;
-                  }
-                </style></defs
-              ><polygon
-                class="cls-1"
-                points="16.35 1.5 7.65 1.5 1.5 7.65 1.5 16.35 7.65 22.5 16.35 22.5 22.5 16.35 22.5 7.65 16.35 1.5"
-              ></polygon><line
-                class="cls-1"
-                x1="12"
-                y1="6.27"
-                x2="12"
-                y2="13.91"></line><line
-                class="cls-1"
-                x1="12"
-                y1="15.82"
-                x2="12"
-                y2="17.73"></line></svg
-            >
-            <p><b>Avoid DIY range hood repair</b></p>
-          </div>
-          <p>
-            - While the idea of DIY BBQ grill repair might seem appealing for
-            cost savings, it poses significant safety concerns and potential
-            long-term costs. It's crucial to consult a professional for
-            appliance repair to ensure safety and avoid additional expenses from
-            improper fixes.
-          </p>
-        </div>
+          <li>
+            <p><b>Inspection and Adjustment:</b></p>
+            <ul>
+              <li>Water Filter Inspection: Checking and replacing water filters to ensure clean water supply and efficient operation.</li>
+              <li>Thermostat and Control Mechanisms: Testing and calibrating control systems and thermostat to ensure they are functioning correctly.</li>
+              <li>Condenser and Air Filter Check: Inspecting the condenser coils and cleaning or replacing air filters to maintain proper airflow and cooling efficiency.</li>
+            </ul>
+          </li>
 
-        <div class="conclusion-description_maintenance">
-          <div class="head_description_maintenance">
-            <svg
-              fill="#000000"
-              width="37px"
-              height="37px"
-              viewBox="0 0 1024 1024"
-              xmlns="http://www.w3.org/2000/svg"
-              class="icon">
-              <path
-                d="M866.9 169.9L527.1 54.1C523 52.7 517.5 52 512 52s-11 .7-15.1 2.1L157.1 169.9c-8.3 2.8-15.1 12.4-15.1 21.2v482.4c0 8.8 5.7 20.4 12.6 25.9L499.3 968c3.5 2.7 8 4.1 12.6 4.1s9.2-1.4 12.6-4.1l344.7-268.6c6.9-5.4 12.6-17 12.6-25.9V191.1c.2-8.8-6.6-18.3-14.9-21.2zM810 654.3L512 886.5 214 654.3V226.7l298-101.6 298 101.6v427.6zm-405.8-201c-3-4.1-7.8-6.6-13-6.6H336c-6.5 0-10.3 7.4-6.5 12.7l126.4 174a16.1 16.1 0 0 0 26 0l212.6-292.7c3.8-5.3 0-12.7-6.5-12.7h-55.2c-5.1 0-10 2.5-13 6.6L468.9 542.4l-64.7-89.1z"
-              ></path>
-            </svg>
-            <p><b>Find a company that provides a warranty.</b></p>
-          </div>
-          <p>
-            - At the Same Day Appliance Repair, we provide up to three months of
-            warranty.
-          </p>
-        </div>
+          <li>
+            <p><b>Part Replacement and Lubrication:</b></p>
+            <ul>
+              <li>Seals and Gaskets: Inspecting and replacing worn seals and gaskets to prevent air leaks and ensure proper insulation.</li>
+              <li>Lubrication: Lubricating moving parts such as door hinges and bearings to reduce friction and wear.</li>
+            </ul>
+          </li>
+
+          <li>
+            <p><b>System Tests:</b></p>
+            <ul>
+              <li>Performance Tests: Running the machine to check for any irregularities in ice production cycles and ice quality.</li>
+              <li>Safety Tests: Ensuring all electrical and mechanical safety features are functioning correctly.</li>
+            </ul>
+          </li>
+
+          <li>
+            <p><b>Diagnostic Checks:</b></p>
+            <ul>
+              <li>Error Code Reading: Checking for any error codes that the machine's electronic system might have logged and diagnosing potential issues.</li>
+              <li>Electrical System Check: Inspecting wiring and connections for wear and ensuring compliance with electrical standards.</li>
+            </ul>
+          </li>
+
+          <li>
+            <p><b>Energy Efficiency Evaluation:</b></p>
+            <ul>
+              <li>Checking Insulation: Ensuring that insulation is intact and effective.</li>
+              <li>Temperature and Pressure Checks: Monitoring refrigeration pressures and temperatures to ensure they are within specified ranges for optimal performance.</li>
+            </ul>
+          </li>
+
+          <li>
+            <p><b>Consultation and Recommendations:</b></p>
+            <ul>
+              <li>Review of Maintenance Practices: Providing feedback on current maintenance practices and recommending improvements.</li>
+              <li>Scheduling Future Maintenance: Discussing and planning the next maintenance visit based on the machine's usage and environmental conditions.</li>
+            </ul>
+          </li>
+        </ol>
+        <p>Regular maintenance not only helps in keeping the ice machine in optimal working condition but also helps in identifying potential issues before they turn into costly repairs. It's a proactive approach to managing the lifecycle of the equipment effectively.</p>
+
       </div>
     </div>
     <Btn />
