--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -596,10 +596,71 @@ main {
   padding: 0 2%;
 }
 
-.description_maintenance ul {
+/* .description_maintenance ul {
   padding: 0;
   list-style: none;
   margin-bottom: 10px;
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+.description_maintenance ol {
+  counter-reset: item; 
+}
+
+.description_maintenance ol li {
+  counter-increment: item;
+  margin-bottom: 15px; 
+  padding-left: 30px;
+  position: relative; 
+  font-weight: 500;
+  font-size: clamp(16px,3vw,18px);
+}
+
+.description_maintenance ol li::before {
+  content: counter(item) "";
+  position: absolute;
+  left: 10px;
+  top: -3px;
+  font-weight: 700;
+  font-size: 20px;
+  color: red;
+  filter: drop-shadow(1.5px 1.5px 0.5px #000);
+}
+
+.description_maintenance ul li{
+  position: relative;
+  width: 100%;
+  align-items: center;
+  max-width: 100%;
+  padding: 0;
+  padding-left: 30px;
+  margin-bottom: 15px;
+  margin-top: 5px;
+  font-weight: 500;
+  list-style: none;
+  font-size: clamp(16px, 3vw, 18px);
+}
+
+
+
+.description_maintenance ul li::before {
+  content: '•';
+  font-size: 30px;
+  color: #ca0913;
+  filter: drop-shadow(0px 0px 0.9px #000);
+  position: absolute;
+  left: 10px;
+  top: -11px;
 }
 
 .description_maintenance li {
@@ -612,14 +673,14 @@ main {
   padding-left: 25px;
 }
 
-.description_maintenance li::before {
+/* .description_maintenance li::before {
   content: '•';
   font-size: 30px;
   color: #ca0913;
   position: absolute;
   left: 0px;
   top: -9px;
-}
+} */
 
 .head_description_maintenance {
   display: flex;
