--- a/src/components/css-components/footer-cta.css
+++ b/src/components/css-components/footer-cta.css
@@ -20,8 +20,8 @@ h2 {
 
 .thumbtack-profile:hover a {
     text-decoration: underline;
-    text-decoration-color: #767676;
-    text-decoration-thickness: 2px;
+    text-decoration-color: #ca0913;
+    text-decoration-thickness: 3px;
 }
 
 
