--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -132,6 +132,22 @@ const menuitems = [
         title: "Range Hood Repair Cost",
         path: "/price-list/range-hood-repair-cost",
       },
+      {
+        title: "Fireplace Repair Cost",
+        path: "/price-list/fireplace-repair-cost",
+      },
+      {
+        title: "BBQ Grill Repair Cost",
+        path: "/price-list/bbq-grill-repair-cost",
+      },
+      {
+        title: "Commercial Freezer Repair Cost",
+        path: "/price-list/commercial-freezer-repair-cost",
+      },
+      {
+        title: "Commercial Ice Machine Repair Cost",
+        path: "/price-list/commercial-ice-machine-repair-cost",
+      },
     ],
   },
 ];
