--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -67,6 +67,11 @@ h2 {
   margin-top: 3%;
 }
 
+.two-col-grid p {
+  font-weight: 500;
+}
+
+
 .col-one img {
   /* width: 500px; */
   max-width: 100%;
@@ -144,6 +149,7 @@ main {
   font-size: clamp(16px, 3vw, 20px);
   max-width: 80%;
   justify-self: center;
+  font-weight: 500;
 }
 
 
@@ -192,6 +198,7 @@ main {
 .desc_pricing-policy p {
   align-self: center;
   font-size: clamp(16px, 4vw, 18px);
+  font-weight: 500;
 }
 
 #cost-svg {
@@ -222,6 +229,7 @@ main {
 .pros_pricing-policy p {
   font-size: clamp(16px, 4vw, 18px);
   margin: 0;
+  font-weight: 500;
 }
 
 .pros_pricing-policy-indent {
@@ -511,9 +519,10 @@ main {
 }
 
 .pros_job-prices p {
-  font-size: clamp(16px, 4vw, 18px);
+  font-size: clamp(16px,4vw,18px);
+  font-weight: 500;
+  margin: 0;
 }
-
 
 
 
@@ -534,6 +543,7 @@ main {
 .maintenance p {
   font-size: clamp(16px, 4vw, 18px);
   margin: 0;
+  font-weight: 500;
 }
 
 .head-maintenance {
