--- a/src/pages/price-list/commercial-dryer-repair-cost.astro
+++ b/src/pages/price-list/commercial-dryer-repair-cost.astro
@@ -45,7 +45,7 @@ import "css/price/style_price.css";
             width="500px"
             height="500px"
             src="/ice-machine-repair/commercial-ice-machine-repair-1.webp"
-            alt="Commercial dishwasher repair cost"
+            alt="Commercial dryer repair cost"
           />
 
           <Contactbtn />
@@ -89,7 +89,7 @@ import "css/price/style_price.css";
               width="500px"
               height="500px"
               src="/ice-machine-repair/commercial-ice-machine-repair-2.webp"
-              alt="commercial dishwasher service cost"
+              alt="Commercial dryer repair cost near me"
             />
           </div>
         </div>
@@ -283,7 +283,7 @@ import "css/price/style_price.css";
             width="600px"
             height="500px"
             src="/ice-machine-repair/commercial-ice-machine-repair-3.webp"
-            alt="Used commercial dishwasher service cost"
+            alt="Commercial dryer repair cost Los Angeles"
           />
         </div>
 
@@ -505,7 +505,7 @@ import "css/price/style_price.css";
             width="500px"
             height="500px"
             src="/ice-machine-repair/commercial-ice-machine-repair-4.webp"
-            alt="Dishwasher repair cost estimator"
+            alt="Whirlpool commercial dryer repair cost"
           />
         </div>
       </div>
@@ -718,7 +718,7 @@ import "css/price/style_price.css";
             width="600px"
             height="500px"
             src="/ice-machine-repair/commercial-ice-machine-repair-5.webp"
-            alt="Commercial dishwasher repair cost Los Angeles"
+            alt="Commercial dryer repair cost near Los Angeles, CA"
           />
         </div>
 
@@ -828,7 +828,7 @@ import "css/price/style_price.css";
           width="600px"
           height="800px"
           src="/ice-machine-repair/commercial-ice-machine-repair-6.webp"
-          alt="cost to repair the dishwasher pump"
+          alt="Best commercial dryer repair cost near los angeles ca"
         />
       </div>
 
