--- a/src/pages/price-list/commercial-freezer-repair-cost.astro
+++ b/src/pages/price-list/commercial-freezer-repair-cost.astro
@@ -333,7 +333,7 @@ import "css/price/style_price.css";
     </main>
     <Btn />
 
-    <div class="job-prices" id="parts-cost-anchor">
+    <div class="job-prices" id="labor-cost-anchor">
       <div class="head_pricing-policy head_pricing-policy_foto">
         <div class="head_pricing-policy_foto-b">
           <img
