--- a/src/pages/price-list/stove-repair-cost.astro
+++ b/src/pages/price-list/stove-repair-cost.astro
@@ -355,7 +355,7 @@ import "css/price/style_price.css";
     </main>
     <Btn />
 
-    <div class="job-prices">
+    <div class="job-prices" id="labor-cost-anchor">
       <div class="head_pricing-policy head_pricing-policy_foto">
         <div class="head_pricing-policy_foto-b">
           <img
