--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -96,12 +96,14 @@ const menuitems = [
     title: "Prices / Oline Estimates",
     path: "/price-list/appliance-reapir-cost",
     children: [
-      { title: "Dryer Repair Cost", path: "/price-list/dryer-repair-cost" },
+      { title: "Dryer Repair Cost",
+        path: "/price-list/dryer-repair-cost" },
       {
         title: "Dishwasher Repair Cost",
         path: "/price-list/dishwasher-repair-cost",
       },
-      { title: "Oven Repair Cost", path: "/price-list/oven-repair-cost" },
+      { title: "Oven Repair Cost",
+        path: "/price-list/oven-repair-cost" },
       {
         title: "Refrigerator Repair Cost",
         path: "/price-list/refrigerator-repair-cost",
@@ -117,10 +119,6 @@ const menuitems = [
       {
         title: "Stove Repair Cost",
         path: "/price-list/stove-repair-cost",
-      },
-      {
-        title: "Commercial Refrigerator Repair Cost",
-        path: "/price-list/commercial-refrigerator-repair-cost",
       },
       {
         title: "Cooktop Repair Cost",
@@ -143,12 +141,24 @@ const menuitems = [
         path: "/price-list/bbq-grill-repair-cost",
       },
       {
+        title: "Commercial Refrigerator Repair Cost",
+        path: "/price-list/commercial-refrigerator-repair-cost",
+      },
+      {
         title: "Commercial Freezer Repair Cost",
         path: "/price-list/commercial-freezer-repair-cost",
       },
       {
         title: "Commercial Ice Machine Repair Cost",
         path: "/price-list/commercial-ice-machine-repair-cost",
+      },
+      {
+        title: "Commercial Dishwasher Repair Cost",
+        path: "/price-list/commercial-dishwasher-repair-cost",
+      },
+      {
+        title: "Commercial Dryer Repair Cost",
+        path: "/price-list/commercial-dryer-repair-cost",
       },
     ],
   },
